namespace ArgosSharp.Domain.Enums
{
    public enum JobPriority
    {
        Low,
        Normal,
        High
    }
}
