namespace ArgosSharp.Domain.Enums
{
    public enum JobType
    {
        NewsArticles,
        JobPosting
    }
}
