namespace ArgosSharp.Domain.Enums
{
    public enum ExportFormat
    {
        JSON,
        CSV,
        EXCEL
    }
}
