// <auto-generated />
using ArgosSharp.Infrastructure.Persistence;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;

#nullable disable

namespace ArgosSharp.Infrastructure.Persistence.Migrations
{
    [DbContext(typeof(ArgosDbContext))]
    [Migration("20260817124112_CreateJobTable")]
    partial class CreateJobTable
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "8.0.30")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("ArgosSharp.Domain.Entity.Job", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<bool>("Enabled")
                        .HasColumnType("boolean");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<int>("Priority")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.ToTable("Jobs");
                });

            modelBuilder.Entity("ArgosSharp.Domain.Entity.Job", b =>
                {
                    b.OwnsOne("ArgosSharp.Domain.ValueObjects.JobParameters", "Parameters", b1 =>
                        {
                            b1.Property<int>("JobId")
                                .HasColumnType("integer");

                            b1.Property<int>("Depth")
                                .HasColumnType("integer");

                            b1.Property<string>("Query")
                                .IsRequired()
                                .HasColumnType("text");

                            b1.Property<string>("Sources")
                                .IsRequired()
                                .HasColumnType("text");

                            b1.HasKey("JobId");

                            b1.ToTable("Jobs");

                            b1.WithOwner()
                                .HasForeignKey("JobId");
                        });

                    b.Navigation("Parameters")
                        .IsRequired();
                });
#pragma warning restore 612, 618
        }
    }
}
